c/src/test/resources/c/nec_inline_bnc/valid/ex40-3.ctrl
<controlFile>
  <sourceFile name="../ex40.c" id="1" />
  <run>
    <startPosition fileId="1" line="6" />
    <wayPoint fileId="1" line="10" >
      <loop iterTimes="4" />
    </wayPoint>
    <endPosition fileId="1" line="22" />
  </run>
</controlFile>