c/src/test/resources/c/nec_inline_bnc/invalid/ex37.ctrl
<controlFile>
  <sourceFile name="../ex37.c" id="1" />
  <run>
    <startPosition fileId="1" line="10" />
    <endPosition fileId="1" line="23" />
  </run>
</controlFile>